<?xml version="1.0"?>
<package format="2">
  <name>template_package</name>
  <version>0.0.0</version>
  <description>The template_package package</description>

  <maintainer email="kris@todo.todo">kris</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>template_package_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
